<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".ZonesMenu">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/zones"
        android:textAlignment="center"
        android:textSize="30sp"
        android:onClick="showPopup"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="89dp"
        android:layout_marginTop="138dp"
        android:background="@drawable/mybuttonsmall"
        android:backgroundTint="#F70404"
        android:text="@string/zone_1"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button1"
        android:layout_marginEnd="90dp"
        android:background="@drawable/mybuttonsmall"
        android:backgroundTint="#81E7D8"
        android:text="@string/zone_3"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button7"
        android:layout_centerVertical="true"
        android:background="@drawable/mybuttonsmall"
        android:backgroundTint="#3FF039"
        android:text="@string/zone_4"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/mybuttonsmall"
        android:backgroundTint="#60E0CB"
        android:text="@string/zone_5"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button9"
        android:layout_centerVertical="true"
        android:background="@drawable/mybuttonsmall"
        android:backgroundTint="#FFE900"
        android:text="@string/zone_6"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="135dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/mybuttonsmall"
        android:backgroundTint="#EE80C8"
        android:text="@string/zone_7"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button7"
        android:layout_centerHorizontal="true"
        android:background="@drawable/mybuttonsmall"
        android:backgroundTint="#FC9E3F"
        android:text="@string/zone_8"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button8"
        android:layout_marginEnd="36dp"
        android:background="@drawable/mybuttonsmall"
        android:backgroundTint="#A8D5E1"
        android:text="@string/zone_9"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button4"
        android:layout_marginBottom="17dp"
        android:text="Main Menu" />
</RelativeLayout>